added javascript file with functions

--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
     </div>
     </br>
     <button type="submit" id="add-book-button" class="add-book-button">Add</button>
+    <script src="main.js"></script>
   </body>
 </html>
