added contact section and footer

--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@
         </button>
       </div>
     </form>
+    <section class="contact-section">
+      <h1>Contact information</h1>
+      <br>Do you have any questions or you just want to say "Hello" </br>You can reach out to us</p>
+      <ul class="contact-info">
+        <li>Our e-mail: <a href="#">mail@mail.com</a></li>
+        <li>Our phone number: 00000000000</li>
+        <li>Our adress: Streetname 12, 84503 City, Country</li>
+      </ul>
+    </section>
+    <footer class="footer">
+      <p>© 2023 Awesome Books by Elis Memic</p>
+    </footer>
     <script src="books.js"></script>
   </body>
 </html>
