added styling to contact section

--- a/index.html
+++ b/index.html
@@ -8,19 +8,18 @@
   </head>
   <body>
     <nav class="navigation">
-    <div class="left-block-navigation">
-      <a href="#">Awesome books</a>
-    </div>
-    <div class="right-block-navigation">
-      <ul class="navigation-links">
-        <li><a href="#list">List</a></li>
-        <li><a href="#form">Add New</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </div>
+      <div class="left-block-navigation">
+        <a>Awesome books</a>
+      </div>
+      <div class="right-block-navigation">
+        <ul class="navigation-links">
+          <li><a href="#list">List</a></li>
+          <li><a href="#form">Add New</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
     </nav>
-    <div class="date-container">
-    </div>
+    <div class="date-container"></div>
     <div id="list" class="header">
       <h1>All awesome books</h1>
     </div>
@@ -44,7 +43,10 @@
     </form>
     <section id="contact" class="contact-section">
       <h1>Contact information</h1>
-      <br>Do you have any questions or you just want to say "Hello" </br>You can reach out to us</p>
+      <p>
+        Do you have any questions or you just want to say "Hello"?<br />You can
+        reach out to us
+      </p>
       <ul class="contact-info">
         <li>Our e-mail: <a href="#">mail@mail.com</a></li>
         <li>Our phone number: 00000000000</li>
