added loops in navigation and active class for links

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       </div>
       <div class="right-block-navigation">
         <ul class="navigation-links">
-          <li><a class="list-page">List</a></li>
+          <li><a class="list-page active">List</a></li>
           <li><a class="add-page">Add New</a></li>
           <li><a class="contact-page">Contact</a></li>
         </ul>
